# PsychologistRustBot

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md  release-policy.json  rustsec-audit-policy.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release-recovery.yml  release.yml
artifacts/eliza-open-set-v2/: manifest.json  metrics.json  model.json  policy.json  split-plan.json
artifacts/eliza-open-set-v3/: manifest.json  metrics.json  model.json  policy.json  split-plan.json
config/: doctor.json
docs/: ARCHITECTURE.md  DATASET.md  MODEL_CARD.md  RELEASE_RECOVERY.md  ROBUSTNESS.md
fixtures/: contrast-test-v3.tsv  intents-v1.tsv  intents-v2.tsv  intents-v3.tsv  ml-parity.tsv  ood-dev-v2.tsv  ood-dev-v3.tsv  ood-test-v2.tsv  ood-test-v3.tsv  ood-v1.tsv  parity.tsv
models/: eliza-intent-v1.json
php/: bot_manager.php  login.php
reports/: eliza-intent-v1.json
scripts/: release-contract.mjs  release-policy.mjs  release-publish.mjs  verify-robustness-report.mjs  workflow-policy.mjs
scripts/tests/: public-attribution.test.mjs  release-contract.test.mjs  release-policy.test.mjs  release-publish.test.mjs  release-workflow.test.mjs
scripts/tests/fixtures/: robustness-report-v1.json
site/: app.js  engine.mjs  index.html  ml-engine.mjs  open-set-engine.mjs  styles.css
site/scripts/: validate-site.mjs
site/tests/: accessibility.test.mjs  engine.test.mjs  open-set-engine.test.mjs  open-set-report.test.mjs  responsive-layout.e2e.mjs  responsive-layout.test.mjs  robustness-report.test.mjs
src/: lib.rs  main.rs  ml.rs  open_set.rs  robustness.rs
tests/: ml_cli.rs  ml_parity.rs  parity.rs
(+2 files in other folders)
