[package]
name = "eliza-lab"
version = "1.1.1"
edition = "2021"
rust-version = "1.81"
description = "A transparent, local-only ELIZA conversation engine for learning how rule-based dialogue systems work."
repository = "https://github.com/ejupi-djenis30/PsychologistRustBot"
license = "MIT"
keywords = ["eliza", "dialogue", "education", "privacy"]
categories = ["command-line-utilities"]
publish = false

[lib]
name = "eliza_lab"
path = "src/lib.rs"

[[bin]]
name = "eliza-lab"
path = "src/main.rs"

[dependencies]

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
