[package]
name = "eliza-lab"
version = "1.3.0"
edition = "2021"
rust-version = "1.81"
description = "A local, explainable intent-classification lab with a non-clinical dialogue interface."
repository = "https://github.com/ejupi-djenis30/PsychologistRustBot"
license = "MIT"
keywords = ["machine-learning", "nlp", "eliza", "cli", "privacy"]
categories = ["command-line-utilities"]
publish = false

[lib]
name = "eliza_lab"
path = "src/lib.rs"

[[bin]]
name = "eliza-lab"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
unicode-normalization = "0.1.24"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
